# emile-Kosmos

./: .gitignore  ARCHITECTURE.md  GPT_feedback.md  GPT_theory_feedback.md  README.md  gemini_and_GPT_feedback.md  kosmos_modules.md  pyproject.toml  source_notes.md  test_extended.py  test_results.json
archive/: GPT_assessment.md  GPT_brainstorm.md  GPT_feedback.md  NEXT_STEPS.md  Through a Scanner Darkly_ Machine Sentience and the Language Virus txt.txt  test_results_bc.json  test_results_fixed.json  test_results_shaped.json
archive/docs/: ARCHITECTURE.md  Compiled Antifinity + Being-in-addition-to-itself notes and equations.txt  GPT_post_node_fix_review.md  LLM_RL_integration_gemini_feedback.md  ROADMAP.md  comprehensive_review.md  gemini_and_GPT_feedback.md  gemini_feedback.md
archive/session_logs/: long_output.md  terminal_output.md
archive/test_results/: stress_test_10k.json  test_post_cleanup.json  test_results_final.json  test_results_shaped_5min.json  test_results_tuned.json
dev_files/: Émile_full_package_v1.ipynb
docs/: ROADMAP_INTENT.md  ROADMAP_SURPLUS_TENSION.md
emile_mini/: __init__.py  action_policy.py  config.py  embodied_qse_emile.py  goal_mapper.py  goal_v2.py  qse_core.py
emile_mini/utils/: json_logger.py  tau_prime.py
kosmos/: __init__.py  __main__.py  logging_config.py  persistence.py
kosmos/agent/: __init__.py  action_policy.py  core.py  demo_buffer.py  surplus_tension.py
kosmos/llm/: __init__.py  ollama.py
kosmos/render/: __init__.py  pygame_render.py
kosmos/tools/: builtins.py  registry.py
tests/: __init__.py
(+4 files in other folders)
